Bug 122353 - Named-Range manager causes GLib-GObject-WARNING ... signal name 'selection_changed' is invalid for instance ... of type 'OOoAtkObjCompTxt'
Summary: Named-Range manager causes GLib-GObject-WARNING ... signal name 'selection_ch...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-28 01:07 UTC by Jim Avera
Modified: 2019-01-25 08:30 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Demo spreadsheet (see Steps To Reproduce) (19.34 KB, application/vnd.oasis.opendocument.spreadsheet)
2018-12-28 01:08 UTC, Jim Avera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Avera 2018-12-28 01:07:49 UTC
Description:
In the attached spreadsheet, opening the Named Range manager and clicking on any pre-existing range causes the following warning on the terminal:

(soffice:21308): GLib-GObject-WARNING **: 17:01:47.056: ../../../../gobject/gsignal.c:3492: signal name 'selection_changed' is invalid for instance '0x41bb4e0' of type 'OOoAtkObjCompTxt'

I think this has newly appeared in master (since early December).

Steps to Reproduce:
1. Open the attached spreadsheet
2. Control-F3   or   Sheet->Named Ranges->Manage
3. Click on the first (or any) name, e.g. AdjCalcAmt.

Actual Results:
The warning appears.

Expected Results:
No warning


Reproducible: Always


User Profile Reset: No



Additional Info:
The spreadsheet was created with an earlier version of Libre Office, probably 5.x
Comment 1 Jim Avera 2018-12-28 01:08:57 UTC
Created attachment 147867 [details]
Demo spreadsheet (see Steps To Reproduce)
Comment 2 Jim Avera 2018-12-28 01:10:03 UTC
Distributor ID:	Ubuntu
Description:	Ubuntu 18.04.1 LTS
Release:	18.04
Codename:	bionic

Version: 6.3.0.0.alpha0+
Build ID: 1141fc3247bf8cf901af3f9c0194cbb2621ff707
CPU threads: 12; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-12-26_19:34:55
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 MM 2018-12-28 12:58:04 UTC
Unconfirmed on mint 19.1 with Version: 6.3.0.0.alpha0+
Build ID: f43699621adf44627aa7529b37677e2c7f892b8f
CPU threads: 2; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-12-27_21:01:50
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Caolán McNamara 2019-01-09 15:43:26 UTC
lets silence that spew
Comment 5 Commit Notification 2019-01-09 21:08:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/8254b4abdc32c5d4b93cc7dbef4a479b3efc3460%5E%21

Resolves: tdf#122353 silence useless selection-changed event attempts

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2019-01-09 21:09:07 UTC
backport to 6-2 in gerrit
Comment 7 Commit Notification 2019-01-25 08:30:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/58f375eba11ba0c49d7da5866fd6a818439903c9%5E%21

Resolves: tdf#122353 silence useless selection-changed event attempts

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.