Resolves: tdf#122353 silence useless selection-changed event attempts

Change-Id: Ie84fb12e6561d93832159779d233102a34b1c78c
Reviewed-on: https://gerrit.libreoffice.org/66044
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>